--- a/ToolsIgnota.UI/ToolsIgnota.UI/ToolsIgnota.UI.csproj
+++ b/ToolsIgnota.UI/ToolsIgnota.UI/ToolsIgnota.UI.csproj
@@ -27,6 +27,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\ToolsIgnota.Backend\ToolsIgnota.Backend.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Page Update="Windows\InitiativeDisplay.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
