--- a/ToolsIgnota.Backend/ToolsIgnota.Backend.csproj
+++ b/ToolsIgnota.Backend/ToolsIgnota.Backend.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net5.0-windows10.0.19041.0</TargetFramework>
+    <SupportedOSPlatformVersion>10.0.17763.0</SupportedOSPlatformVersion>
   </PropertyGroup>
 
 </Project>
