--- a/ToolsIgnota.UI/ToolsIgnota.UI/ToolsIgnota.UI.csproj
+++ b/ToolsIgnota.UI/ToolsIgnota.UI/ToolsIgnota.UI.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows10.0.19041.0</TargetFramework>
-    <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
+    <TargetPlatformMinVersion>10.0.19041.0</TargetPlatformMinVersion>
     <RootNamespace>ToolsIgnota.UI</RootNamespace>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <Platforms>x86;x64;arm64</Platforms>
@@ -21,7 +21,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0-preview4" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.0.0-experimental1" />
     <PackageReference Include="Microsoft.WindowsAppSDK.Foundation" Version="1.0.0-experimental1" />
@@ -31,7 +30,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\ToolsIgnota.Backend\ToolsIgnota.Backend.csproj" />
+    <ProjectReference Include="..\..\ToolsIgnota.Backend\ToolsIgnota.Data.csproj" />
+    <ProjectReference Include="..\..\ToolsIgnota.Data\ToolsIgnota.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
