--- a/.editorconfig
+++ b/.editorconfig
@@ -61,7 +61,7 @@ csharp_style_expression_bodied_constructors = false:suggestion
 #prefer expression bodies for methods
 csharp_style_expression_bodied_methods = when_on_single_line:silent
 #prefer expression-bodied members for properties
-csharp_style_expression_bodied_properties = true:warning
+csharp_style_expression_bodied_properties = false
 
 #Style - expression level options
 
