--- a/ToolsIgnota/ToolsIgnota.csproj
+++ b/ToolsIgnota/ToolsIgnota.csproj
@@ -16,6 +16,8 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Styles\Spacings.xaml" />
+    <None Remove="Views\ControlInitiativePage.xaml" />
+    <None Remove="Views\CreatureImageSettingsControl.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -39,6 +41,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Page Update="Views\CreatureImageSettingsControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 
   <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
@@ -47,6 +52,9 @@
 
   <ItemGroup>
     <Page Update="Styles\Spacings.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="Views\ControlInitiativePage.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
   </ItemGroup>
