--- a/ToolsIgnota/ToolsIgnota.csproj
+++ b/ToolsIgnota/ToolsIgnota.csproj
@@ -15,9 +15,13 @@
     <EnableMsixTooling>true</EnableMsixTooling>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Assets\WindowIcon.ico" />
     <None Remove="Styles\Spacings.xaml" />
     <None Remove="Views\ControlInitiativePage.xaml" />
     <None Remove="Views\CreatureImageSettingsControl.xaml" />
+    <None Remove="Views\DisplayPage.xaml" />
+    <None Remove="Views\InitiativeDisplayControl.xaml" />
+    <None Remove="Windows\DisplayWindow.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,6 +31,7 @@
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
     <PackageReference Include="CommunityToolkit.WinUI.UI" Version="7.1.2" />
+    <PackageReference Include="CommunityToolkit.WinUI.UI.Controls" Version="7.1.2" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230118.102" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.WinUI.Managed" Version="2.0.9" />
@@ -41,6 +46,10 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Page Update="Views\InitiativeDisplayControl.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Update="Views\CreatureImageSettingsControl.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -55,6 +64,12 @@
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="Views\ControlInitiativePage.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="Views\DisplayPage.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="Windows\DisplayWindow.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
   </ItemGroup>
